# pylar-framework

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: CONSTITUTION.md
docs/adr/: 0001-foundation-principles.md  0002-project-structure.md  0003-tech-stack.md  0004-admin-panel.md  0005-package-autodiscovery.md  0006-multi-queue-priorities-and-supervision.md  0007-api-layer-and-openapi.md  0008-observability.md  0009-auth-parity.md  0010-lts-and-semver-policy.md  0011-multi-tenancy.md  0012-encryption.md  0013-webauthn-passkeys.md
docs/site/: changelog.md  index.md  support-policy.md  testing.md
docs/todo/: README.md  auth.md  broadcasting.md  cache.md  console.md  database-migrations.md  database.md  events.md  i18n.md  mail.md  notifications.md  queue.md  routing.md  scheduling.md  storage.md  testing.md  validation.md  views.md
pylar/: __init__.py
pylar/admin/: __init__.py
pylar/api/: __init__.py  commands.py  docs_ui.py  errors.py  middleware.py  openapi.py  pagination.py  provider.py  renderer.py
pylar/auth/: __init__.py  config.py  context.py  contracts.py  csrf.py  exceptions.py  gate.py  hashing.py  middleware.py  policy.py  provider.py  roles.py  session_guard.py  signed.py  tokens.py  totp.py  user.py  verification.py
pylar/broadcasting/: __init__.py  authorizer.py  broadcaster.py  exceptions.py  message.py  provider.py  socket.py
pylar/cache/: __init__.py  cache.py  commands.py  config.py  exceptions.py  lock.py  manager.py  provider.py  store.py
pylar/config/: __init__.py  env.py  exceptions.py  loader.py  schema.py
pylar/console/: __init__.py  builtin.py  command.py  entrypoint.py  exceptions.py  input.py  kernel.py  new_project.py  output.py  prompt.py  tinker.py
pylar/database/: __init__.py  config.py  connection.py  exceptions.py  expressions.py  fields.py  manager.py  middleware.py  model.py  observer.py  paginator.py  provider.py  queryset.py  seeding.py  session.py  soft_deletes.py  sync_manager.py  timestamps.py  transaction.py
pylar/encryption/: __init__.py  commands.py  encrypter.py  exceptions.py  provider.py
pylar/events/: __init__.py  bus.py  event.py  exceptions.py  listener.py  provider.py  queued.py  subscriber.py
pylar/foundation/: __init__.py  application.py  binding.py  commands.py  container.py  exceptions.py  kernel.py  plugins.py  provider.py  resolver.py
pylar/http/: __init__.py  commands.py  error_handler.py  error_pages.py  exceptions.py  health.py  kernel.py  maintenance_commands.py  middleware.py  provider.py  request.py  response.py
pylar/i18n/: __init__.py  config.py  context.py  exceptions.py  loader.py  middleware.py  provider.py  translator.py
pylar/mail/: __init__.py  config.py  exceptions.py  jobs.py  mailable.py  mailer.py  message.py  provider.py  transport.py
pylar/notifications/: __init__.py  contracts.py  dispatcher.py  exceptions.py  jobs.py  notification.py  provider.py
pylar/observability/: __init__.py  commands.py  doctor.py  logging.py  otel.py  prometheus.py  provider.py  sentry.py
pylar/queue/: __init__.py  commands.py  config.py  dispatcher.py  exceptions.py  job.py  middleware.py  payload.py  provider.py  queue.py  record.py  supervisor.py  worker.py
pylar/routing/: __init__.py  action.py  cache.py  commands.py  compiler.py  exceptions.py  route.py  router.py  throttle.py  websocket.py
pylar/scheduling/: __init__.py  builder.py  commands.py  exceptions.py  kernel.py  provider.py  schedule.py  task.py
pylar/session/: __init__.py  config.py  context.py  encrypted_store.py  middleware.py  provider.py  session.py  store.py
pylar/storage/: __init__.py  config.py  exceptions.py  provider.py  store.py
pylar/support/: __init__.py  async_pipe.py  logging.py  serializer.py
pylar/tenancy/: __init__.py  context.py  middleware.py  mixin.py  model.py  provider.py  resolvers.py
pylar/testing/: __init__.py  application.py  assertions.py  client.py  database.py  exceptions.py  factory.py  fakes.py  plugin.py
pylar/validation/: __init__.py  dto.py  exceptions.py  model_dto.py  renderer.py  resolver.py  upload.py
pylar/views/: __init__.py  config.py  exceptions.py  jinja.py  provider.py  renderer.py  view.py
tests/: test_coding_standards.py
tests/admin/: conftest.py  test_api.py  test_config.py  test_field_types.py  test_registry.py  test_serializer.py
tests/api/: test_api_phase7a.py  test_api_phase7b.py
tests/auth/: test_api_tokens.py  test_argon2.py  test_authorize.py  test_context.py  test_csrf.py  test_gate.py  test_hashing.py  test_login_throttle.py  test_require_auth.py  test_roles.py  test_routing_integration.py  test_signed_urls.py  test_totp.py  test_verification.py  test_webauthn.py  test_webauthn_attestation.py  test_webauthn_commands.py
tests/broadcasting/: test_broadcaster.py  test_pusher.py  test_websocket_routing.py
tests/cache/: test_atomic_and_tags.py  test_cache.py  test_cache_clear.py  test_manager.py  test_persistent_drivers.py  test_redis_cache.py
tests/config/: test_env.py  test_loader.py
tests/console/: test_commands_smoke.py  test_input.py  test_kernel.py  test_make.py  test_new_project.py  test_output_and_help.py  test_tinker.py
tests/database/: conftest.py  test_django_style.py  test_eager_loading.py  test_expressions.py  test_extra_fields.py  test_middleware.py  test_migrations.py  test_migrations_completeness.py  test_model_lifecycle.py  test_observers.py  test_paginator.py  test_pool_listeners.py  test_provider.py  test_queryset.py  test_relationships.py  test_session.py  test_soft_deletes.py  test_sync_manager.py
tests/encryption/: test_encrypter.py
tests/events/: test_bus.py  test_polish.py  test_queued_listener.py
tests/http/: test_kernel.py  (+6 more)
(+178 files in other folders)
