[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylar-framework"
version = "0.1.0"
description = "Typed async Python web framework — Laravel ergonomics, Django batteries."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Pylar Foundation", email = "pylar-foundation@vsibiri.info" }]
maintainers = [{ name = "Pylar Foundation", email = "pylar-foundation@vsibiri.info" }]
keywords = [
    "web",
    "framework",
    "async",
    "asgi",
    "starlette",
    "sqlalchemy",
    "pydantic",
    "laravel",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "starlette>=0.40",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "croniter>=2.0",
    "cryptography>=42.0",
    "rich>=13.0",
    "nest_asyncio>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "argon2-cffi>=23.1",
    "markdown>=3.6",
    "faker>=20.0",
    "pyyaml>=6.0",
    "fakeredis>=2.20",
]
serve = [
    "uvicorn>=0.30",
]
sqlite = [
    "aiosqlite>=0.20",
]
postgres = [
    "asyncpg>=0.29",
]
auth = [
    "argon2-cffi>=23.1",
]
webauthn = [
    "webauthn>=2.0,<3",
]
mail-markdown = [
    "markdown>=3.6",
]
cache-redis = [
    "redis>=5.0",
]
queue-redis = [
    "redis>=5.0",
]
queue-sqs = [
    "aioboto3>=12.0",
]
broadcast-redis = [
    "redis>=5.0",
]
session-redis = [
    "redis>=5.0",
]
storage-gcs = [
    "gcloud-aio-storage>=9.0",
]
storage-s3 = [
    "aioboto3>=12.0",
]
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
prometheus = [
    "prometheus-client>=0.20",
]
sentry = [
    "sentry-sdk>=2.0",
]
broadcast-pusher = [
    "httpx>=0.27",
]
tinker = [
    "ipython>=8.0",
    "nest_asyncio>=1.5",
]
faker = [
    "faker>=20.0",
]
i18n-yaml = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://pylar-foundation.github.io/pylar-framework/"
Documentation = "https://pylar-foundation.github.io/pylar-framework/"
Repository = "https://github.com/pylar-foundation/pylar-framework"
Issues = "https://github.com/pylar-foundation/pylar-framework/issues"
Changelog = "https://github.com/pylar-foundation/pylar-framework/blob/main/CHANGELOG.md"

[project.scripts]
pylar = "pylar.console.entrypoint:main"

[project.entry-points.pytest11]
pylar = "pylar.testing.plugin"

[tool.hatch.build.targets.wheel]
packages = ["pylar"]
# Templates (.template / .mako) live inside the package directories so the
# default packages-based inclusion picks them up automatically — no
# force-include block is needed and one would only produce duplicates.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN", "RUF"]
ignore = ["ANN401"]  # we forbid Any explicitly via mypy

[tool.ruff.lint.per-file-ignores]
# boto3 SDK uses CamelCase keyword arguments — we mirror the API verbatim
# in fakes/stubs that stand in for botocore clients in our tests.
"tests/queue/test_sqs_queue.py" = ["N803"]
"tests/storage/test_s3_storage.py" = ["N803"]
"tests/storage/test_gcs_storage.py" = ["N803"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["uvicorn"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["croniter"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["markdown"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["prometheus_client", "prometheus_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentry_sdk", "sentry_sdk.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pylar.queue.drivers.redis"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["IPython", "IPython.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aioboto3", "aioboto3.*", "botocore", "botocore.*", "boto3", "boto3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# `webauthn` is an optional extra (pylar[webauthn]). CI runs mypy
# without installing extras, so the library must be treated as
# stub-less the same way the admin / queue / cache optional drivers
# are. Keeping this override on even when the extra *is* installed
# ensures mypy output stays identical across environments.
module = ["webauthn", "webauthn.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gcloud", "gcloud.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["nest_asyncio"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
